Skip to content

wasapi: audio policy (ducking)

VLC ought to pause playback instead of ducking. Unfortunately, there is no infrastructural provisions for an audio output to control the playlist. The same problem affects PulseAudio (#5101 (closed)).

Concretely, on Windows 7, IAudioVolumeDuckNotification should be implemented. See also http://msdn.microsoft.com/en-us/library/windows/desktop/dd940517(v=vs.85).aspx

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information