mmdevice: implement audio policy callback (fixes #7204)